--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>Lorem Ipsum estilizado | Dev Web</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="naoalterar.css">
-        
 </head>
 <body>
     <main id="container">
+        <button class="trocarmodo">Modo Noturno</button>
         <h1 class="titulo">Lorem ipsum dolor sit amet</h1>
         <br>
         <p class="frase">Tempore aspernatur nesciunt laudantium doloremque. Inventore reprehenderit porro vitae sequi! Molestiae, velit.</p>
         <br>
         <p class="autor">Asperiores voluptatibus</p>
+        <script src="script.js"></script>
     </main>
 </body>
 </html>
+
